--- a/client/sass/_vars.scss
+++ b/client/sass/_vars.scss
@@ -1,5 +1,6 @@
 $colorBlack: #333333;
 $colorGray: #828282;
+$colorLightGray: #e0e0e0;
 $colorWhite: #ffffff;
 $colorBlue: #2f80ed;
 $colorRed: #eb5757;
