--- a/client/sass/root.scss
+++ b/client/sass/root.scss
@@ -32,6 +32,12 @@ html {
   margin: auto;
 }
 
+.toggle {
+  opacity: 1 !important;
+  pointer-events: all !important;
+  transform: translateY(0) !important;
+}
+
 @media only screen and (max-width: 428px) {
   :root {
     font-size: 52%;
