--- a/client/sass/profile.module.scss
+++ b/client/sass/profile.module.scss
@@ -18,8 +18,8 @@
     transform: translateY(-20px);
     pointer-events: none;
     opacity: 0;
-    bottom: -140px;
-    right: 0;
+    bottom: -155px;
+    right: 15px;
     background-color: $colorWhite;
     border: 1px solid $colorLightGray;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
@@ -32,12 +32,14 @@
         &:hover {
           background-color: $colorLightGray;
         }
+        &:last-of-type {
+          margin-bottom: 10px;
+        }
         cursor: pointer;
         transition: background-color 0.2s ease, color 0.2s ease;
         color: $colorBlack;
-        padding: 3px 0;
         padding: 8px 0;
-        padding-right: 40px;
+        padding-right: 55px;
         padding-left: 15px;
         border-radius: 8px;
         margin-bottom: 5px;
@@ -52,7 +54,6 @@
           font-size: 20px;
         }
       }
-      margin-bottom: 5px;
     }
     .logoutButton {
       @extend .pathOptions;
@@ -88,7 +89,7 @@
     }
     i {
       user-select: none;
-
+      color: $colorBlack;
       cursor: pointer;
       transition: transform 0.3s ease;
     }
@@ -203,7 +204,9 @@
         display: none;
       }
       i {
-        display: none;
+        border-radius: 2px;
+        font-size: $sizeBigHeader;
+        margin-left: 10px;
       }
     }
   }
