--- a/client/sass/edit.module.scss
+++ b/client/sass/edit.module.scss
@@ -63,29 +63,36 @@
       }
       .editPhoto {
         @include flex(flex-start, center);
+        position: relative;
         margin-bottom: 50px;
         .photoElement {
+          position: relative;
           width: 75px;
           height: 75px;
-          background-color: $colorGray;
-          background-position: center;
-          background-size: cover;
-          border-radius: 8px;
+          border-radius: 100%;
+          img {
+            border-radius: inherit;
+            width: 100%;
+            height: 100%;
+          }
           .photoOverlay {
             @include flex(center, center);
+            position: absolute;
+            top: 0;
             &:hover i {
               color: $colorLightGray;
+              transform: scale(1.35);
             }
             &:hover {
-              background-color: rgba($color: $colorBlack, $alpha: 0.6);
+              background-color: rgba($color: $colorBlack, $alpha: 0.7);
             }
             width: 100%;
             height: 100%;
-            background-color: rgba($color: $colorBlack, $alpha: 0.3);
-            border-radius: 8px;
+            border-radius: 100%;
+            background-color: rgba($color: $colorBlack, $alpha: 0.45);
             i {
               color: $colorWhite;
-              transition: color 0.15s ease-in-out;
+              transition: color 0.15s ease-in-out, transform 0.25s ease;
             }
             transition: background-color 0.15s ease;
             cursor: pointer;
@@ -97,6 +104,20 @@
           font-size: $sizeText;
           color: $colorGray;
           margin-left: 28px;
+        }
+        .infoContainer {
+          @include flex(center, flex-start);
+          div {
+            position: absolute;
+            bottom: 0;
+            p {
+              font-size: 11px;
+              text-transform: initial;
+              opacity: 0.7;
+            }
+          }
+
+          flex-direction: column;
         }
       }
 
