--- a/client/sass/auth.module.scss
+++ b/client/sass/auth.module.scss
@@ -10,6 +10,8 @@
   border-radius: 24px;
   .logo {
     margin-bottom: 30px;
+    width: 100%;
+    height: 40px;
     svg {
       width: 170px;
       height: 30px;
@@ -97,9 +99,8 @@
   }
   .contentBelow {
     @include flex(space-between, center);
-    margin-top: 30px;
+    margin-top: 45px;
     flex-direction: column;
-    height: 120px;
     .alternativeLogins {
       @include flex(initial, center);
 
@@ -125,6 +126,15 @@
   }
 }
 
+.footerContainer {
+  @include flex(space-between, center);
+  margin: 10px auto;
+  p {
+    color: $colorGray;
+    font-size: 14px;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .loginContainer {
     @include flex(space-between, center);
@@ -146,6 +156,12 @@
     .formContainer {
       width: 100%;
     }
+  }
+  .footerContainer {
+    width: 100% !important;
+    padding: 0 18px;
+    min-width: initial !important;
+    max-width: initial !important;
   }
 }
 @media only screen and (max-width: 425px) {
